--- a/task-manager/src/App.css
+++ b/task-manager/src/App.css
@@ -1,38 +1,25 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .column {
+  width: 30%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.droppable-col {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px 10px 0 10px;
+  width: 100%;
+  height: auto;
+  border-radius: 7px;
+  background-color: gray;
+}
+.item {
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 7px;
+  background-color: gray;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
